src/expr/src/scalar/snapshots/mz_expr__scalar__func__bit_xor_uint16.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(is_infix_op = true, sqlname = \"#\", propagates_nulls = true)]\nfn bit_xor_uint16<'a>(a: u16, b: u16) -> u16 {\n    a ^ b\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct BitXorUint16;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for BitXorUint16 {
    type Input1 = u16;
    type Input2 = u16;
    type Output = u16;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        bit_xor_uint16(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn propagates_nulls(&self) -> bool {
        true
    }
}
impl std::fmt::Display for BitXorUint16 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("#")
    }
}
fn bit_xor_uint16<'a>(a: u16, b: u16) -> u16 {
    a ^ b
}
